--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
+    "react-particles": "^2.12.2",
     "react-router-dom": "^6.11.1",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.152.2",
-    "three-css3drenderer": "^1.0.1"
+    "three-css3drenderer": "^1.0.1",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
