--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-intersection-observer": "^9.4.3",
     "react-particles": "^2.12.2",
     "react-router-dom": "^6.11.1",
+    "react-spring": "^9.7.2",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.152.2",
