--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
     "react-particles": "^2.12.2",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.11.1",
     "react-spring": "^9.7.2",
     "react-tilt": "^1.0.2",
