--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^8.13.0",
     "@tweenjs/tween.js": "^20.0.3",
     "framer-motion": "^10.12.7",
+    "lottie-react": "^2.4.0",
     "maath": "^0.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
